Fixed issue of footer covering content

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,19 @@
   text-align: center;
 }
 
+
+/* Element above footer to stop footer covering content */
+.element-above-footer {
+  margin-bottom: 80px;
+}
+
+
+
 .em{
   margin: 5px;
 }
 
+
+
+@media (max-width: 1023px) {
+}
